--- a/authentication/src/app/globals.css
+++ b/authentication/src/app/globals.css
@@ -2,4 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
+@layer base {
+  h1 {
+    @apply text-4xl font-bold;
+  }
+  a {
+    @apply text-blue-500;
+  }
+}
